TMUX improved, added solarized color scheme and changed command key to C-z

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,8 @@ set -g default-terminal "xterm"
 
 # Ctrl + A
 unbind C-b
-set -g prefix C-a
-bind a send-prefix
+set -g prefix C-z
+bind z send-prefix
 
 # Usability
 set -s escape-time 0
@@ -39,16 +39,47 @@ bind - resize-pane -D 3
 bind + resize-pane -U 3
 
 bind ? resize-pane -Z
-set -g status-bg colour234
+bind -n C-k clear-history
 
-set-environment -g POWERLINE_COMMAND "powerline"
-set-environment -g POWERLINE_CONFIG_COMMAND "powerline-config"
+#set -g status-bg colour234
+#set-environment -g POWERLINE_COMMAND "powerline"
+#set-environment -g POWERLINE_CONFIG_COMMAND "powerline-config"
 
 # Status line
 #
-source "/usr/share/powerline/bindings/tmux/powerline.conf"
-source "/usr/share/powerline/bindings/tmux/powerline_tmux_1.8_plus.conf"
-source "/usr/share/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf"
+#source "/usr/share/powerline/bindings/tmux/powerline.conf"
+#source "/usr/share/powerline/bindings/tmux/powerline_tmux_1.8_plus.conf"
+#source "/usr/share/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf"
 
 set -g status-interval 10
 
+#### COLOUR (Solarized 256)
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
