Some improvements for tmux configuration.

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,24 +9,22 @@ set -g default-terminal "xterm"
 
 # Ctrl + A
 unbind C-b
-set -g prefix C-z
-bind z send-prefix
-
+set-option -g prefix 'C-\'
 # Usability
 set -s escape-time 0
 set -g base-index 1
-
 set -g aggressive-resize on
-
-
-bind c new-window -c "#{pane_current_path}"
+#set-option default-path "#{pane_current_path}"
 
 # Keys
-
 set-window-option -g mode-keys vi
 
-bind s split-window -v -c "#{pane_current_path}"
-bind v split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+#bind s split-window -v -c "#{pane_current_path}"
+#bind v split-window -h -c "#{pane_current_path}"
+
+bind v split-window -c "#{pane_current_path}" -h
+bind s split-window -c "#{pane_current_path}" -v
 
 bind h select-pane -L
 bind j select-pane -D
@@ -38,7 +36,7 @@ bind > resize-pane -R 5
 bind - resize-pane -D 3
 bind + resize-pane -U 3
 
-bind ? resize-pane -Z
+bind z resize-pane -Z
 bind -n C-k clear-history
 
 #set -g status-bg colour234
@@ -51,6 +49,7 @@ bind -n C-k clear-history
 #source "/usr/share/powerline/bindings/tmux/powerline_tmux_1.8_plus.conf"
 #source "/usr/share/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf"
 
+setw -g automatic-rename on
 set -g status-interval 10
 
 #### COLOUR (Solarized 256)
