--- a/tmux.conf
+++ b/tmux.conf
@@ -7,47 +7,22 @@ set-window-option -g utf8 on
 #set -g default-terminal "screen-256color"
 set -g default-terminal "xterm"
 
-# Ctrl + A
+# Ctrl + \
 unbind C-b
 set-option -g prefix 'C-\'
 # Usability
+bind -n C-k clear-history
 set -s escape-time 0
 set -g base-index 1
 set -g aggressive-resize on
-#set-option default-path "#{pane_current_path}"
 
 # Keys
 set-window-option -g mode-keys vi
 
 bind c new-window -c "#{pane_current_path}"
-#bind s split-window -v -c "#{pane_current_path}"
-#bind v split-window -h -c "#{pane_current_path}"
-
-bind v split-window -c "#{pane_current_path}" -h
-bind s split-window -c "#{pane_current_path}" -v
-
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-bind < resize-pane -L 5
-bind > resize-pane -R 5
-bind - resize-pane -D 3
-bind + resize-pane -U 3
-
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 bind z resize-pane -Z
-bind -n C-k clear-history
-
-#set -g status-bg colour234
-#set-environment -g POWERLINE_COMMAND "powerline"
-#set-environment -g POWERLINE_CONFIG_COMMAND "powerline-config"
-
-# Status line
-#
-#source "/usr/share/powerline/bindings/tmux/powerline.conf"
-#source "/usr/share/powerline/bindings/tmux/powerline_tmux_1.8_plus.conf"
-#source "/usr/share/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf"
 
 setw -g automatic-rename on
 set -g status-interval 10
@@ -82,3 +57,6 @@ set-option -g display-panes-colour colour166 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
+
+## IDE Environment
+bind D source-file ~/Dropbox/tmux/ide
